Write-branch: Introduced GGshWritablePriceImpl for creating / updating price objects. No JUnit test cases yet, but rudimentary tests already succeeded (tool outside of this project).